# hurricane

./: .gitignore  .gitmodules  .replit  Makefile  build.py  e {            printf([]);  genheader.py  log.txt  main  main.c  main.cpp  maze.c  meson.build  monster_maze.c  replit.nix  run  run.sh  test.c  todo.txt  vgcore.1523  vgcore.1862  vgcore.2974
.ccls-cache/@@home@runner@MidnightblueAzureLight/: @nix@store@4m98bsvjh538p292pr4604313mjmnpc5-clang-12.0.1-lib@lib@clang@12.0.1@include@stdarg.h.blob  @nix@store@4m98bsvjh538p292pr4604313mjmnpc5-clang-12.0.1-lib@lib@clang@12.0.1@include@stdbool.h.blob  @nix@store@4m98bsvjh538p292pr4604313mjmnpc5-clang-12.0.1-lib@lib@clang@12.0.1@include@stddef.h.blob  @nix@store@dlni53myj53kx20pi4yhm7p68lw17b07-gcc-10.3.0@include@c++@10.3.0@math.h.blob  @nix@store@dlni53myj53kx20pi4yhm7p68lw17b07-gcc-10.3.0@include@c++@10.3.0@stdlib.h.blob  @nix@store@iwd8ic5hhwdxn5dga0im55g5hjl270cd-glibc-2.33-47-dev@include@alloca.h.blob  @nix@store@iwd8ic5hhwdxn5dga0im55g5hjl270cd-glibc-2.33-47-dev@include@bits@byteswap.h.blob  @nix@store@iwd8ic5hhwdxn5dga0im55g5hjl270cd-glibc-2.33-47-dev@include@bits@endian.h.blob  @nix@store@iwd8ic5hhwdxn5dga0im55g5hjl270cd-glibc-2.33-47-dev@include@bits@endianness.h.blob  @nix@store@iwd8ic5hhwdxn5dga0im55g5hjl270cd-glibc-2.33-47-dev@include@bits@floatn-common.h.blob  @nix@store@iwd8ic5hhwdxn5dga0im55g5hjl270cd-glibc-2.33-47-dev@include@bits@floatn.h.blob  @nix@store@iwd8ic5hhwdxn5dga0im55g5hjl270cd-glibc-2.33-47-dev@include@bits@flt-eval-method.h.blob  (+50 more)
.ccls-cache/@home@runner@MidnightblueAzureLight/: engine@engine.c  (+11 more)
bananabuild/: .gitignore  build.py  compile.py  incremental.py  main.py  progress.py  util.py
builder/: build.py
engine/: geometry.c  legacy_render.c  shared.c  video_render.c
hurricane/: anim.c  clock.c  compile.py  engine.c  file.c  geometry.c  input.c  legacy_render.c  object.c  scene.c  shared.c  tiny_obj.c
lutgen/: taylor_math.c  taylor_math.h
taylor_math/: taylor_math.c  taylor_math.cpp  taylor_math.h
(+305 files in other folders)
